<resources>
    <string name="app_name">Optimiser for Tap Titans</string>
    <string name="tapTitans_name">com.gamehivecorp.taptitans</string>
    <string name="nav_header_description"><![CDATA[Created by <a href="https://www.reddit.com/user/Titansmasher_/">/u/Titansmasher_</a>]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="whats_new_message"><![CDATA[<b>Welcome to Optimiser for Tap Titans 2.0!</b><br/><br/>
    As you will soon see, there have been a lot of changes in this version, most notably a complete UI overhaul.<br/>
    A huge thank you goes out to xBard (/u/gal1gal222) for all the artwork that you can see, and for helping design the layout.<br/><br/>
    <b>New features:</b><br/>
    &#149; <b>Added floating panels!!</b><br/>
     - Now you can pop the results from optimisations out into a floating window<br/>
    &#149; Brand new UI<br/>
    &#149; Performance improvements for relic optimisation<br/>
    &#149; Improved customisability of the relic optimisation<br/>
    &#149; Save management! Now you can mock saves.<br/>
    &#149; Extended details on the stats page <br/><br/>
    As always, im going to be continuing to add new features, so feel free to suggest anything!<br/>
    If you need more details, check out the FAQ &amp; About pages.<br/><br/>
    Thanks for using the app!<br/>
    - Titansmasher
    ]]></string>
    <string name="welcome_message"><![CDATA[<b>Welcome to Optimiser for Tap Titans 2.0!</b><br/><br/>
    Thank you for downloading this app, Ive spent a fair while on it getting everything working just right.<br/>
    This app has several features, all of which have been detailed in the FAQ &amp; About section, so make sure you have a read through that.<br/><br/>
    <b>Key features</b><br/>
    &#149; Stats - View everything you didnt know about your player<br/>
    &#149; Optimiser - Calculate the best way to spend your relics<br/>
    &#149; Sequencer - Work out what artifact you will get next<br/>
    &#149; Save manager - Play around with fake saves to work out what you want to do<br/>
    &#149; Faq &amp; About - Learn more about the app<br/><br/>
    I hope you enjoy the app and find it useful!<br/>
    - Titansmasher
    ]]></string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Donate</string>
    <string name="landing_stats">Statistics</string>
    <string name="landing_optimiser">Optimiser</string>
    <string name="landing_sequencer">Sequencer</string>
    <string name="landing_savemanagement">Save Manager</string>
    <string name="landing_faqthanks">Faq &amp; About</string>
    <string name="landing_settings">Settings</string>
    <string name="landing_donate">Donate</string>
    <string name="nav_stats">Stats</string>
    <string name="tab_stats_account">Account</string>
    <string name="tab_stats_world">World</string>
    <string name="tab_stats_artifact">Artifacts</string>
    <string name="tab_stats_hero">Heros</string>
    <string name="tab_optimiser_settings">Settings</string>
    <string name="tab_optimiser_herolevels">Hero Levels</string>
    <string name="tab_sequencer_artifact">Artifact</string>
    <string name="tab_faqabout_about">About</string>
    <string name="tab_faqabout_faq">FAQ</string>
    <string name="tab_faqabout_credits">Credits</string>
    <string name="tab_save_manage">Manage</string>
    <string name="tab_save_editartifacts">Artifacts</string>
    <string name="tab_save_editcustomisation">Custs</string>
    <string name="tab_save_editgeneral">General</string>
    <string name="tab_optimiser_dmg">DMG</string>
    <string name="tab_optimiser_gold">Gold</string>
    <string name="tab_optimiser_tdmg">TDMG</string>
    <string name="tab_optimiser_dmge">DMGE</string>
    <string name="settings_betadesc">Opting into the beta gives you early access to any new features im working on!</string>
    <string name="settings_betalink">https://play.google.com/apps/testing/com.titansmasher.taptitansoptimizer</string>
    <string name="settings_sourcelink">https://github.com/Titansmasher/TapTitans-Optimiser</string>
    <string name="settings_howtorevoke">You cannot revoke permissions here. To do so you need to go into your app settings and manually revoke each permission</string>
    <string name="donate_desc"><![CDATA[
    <h3><i>Well hello there</i></h3>
    <p>Firstly can I just say, thank you for checking out this app! Ive put quite a bit of time into this, so it means a lot that you took the time to use it!</p>
    <p>Thanks for checking out the donation section, even if you dont donate. The buttons below will take you to a paypal donation site where you can choose to donate any amount.
    <p>If you do donate, then thank you very much, its highly appreciated by both of us, and if you dont then thanks for taking the time to read this anyway :)</p>]]></string>
    <string name="stats_account_general_header">General</string>
    <string name="stats_account_purchases_header">Purchases</string>
    <string name="stats_account_general_playername">Player name</string>
    <string name="stats_account_general_friendcode">Friend code</string>
    <string name="stats_account_general_playerlevel">Player level</string>
    <string name="stats_account_general_lastactive">Last active</string>
    <string name="stats_account_general_playtime">Play time</string>
    <string name="stats_account_general_diamonds">Diamonds</string>
    <string name="stats_account_general_timesincesync">Time since sync</string>
    <string name="stats_account_general_dungeonchain">Daily dungeon #</string>
    <string name="stats_account_general_lastcloudsave">Last cloud save</string>
    <string name="stats_account_general_ischeater">Cheater?</string>
    <string name="stats_account_general_cheatercount">" • Times cheated"</string>
    <string name="stats_account_general_cheaterreason">" • Cheater reason"</string>
    <string name="stats_account_purchases_purchasecount">Purchase count</string>
    <string name="stats_account_purchases_spendamount">Total spent (USD)</string>
    <string name="stats_account_purchases_unapprovedpurchases">Unapproved purchases</string>
    <string name="stats_account_purchases_purchaseslist">Purchases:</string>
    <string name="stats_account_purchases_diamonds1">" • 180 diamonds"</string>
    <string name="stats_account_purchases_diamonds2">" • 500 diamonds"</string>
    <string name="stats_account_purchases_diamonds3">" • 1200 diamonds"</string>
    <string name="stats_account_purchases_diamonds4">" • 3100 diamonds"</string>
    <string name="stats_account_purchases_diamonds5">" • 6500 diamonds"</string>
    <string name="stats_account_purchases_diamonds6">" • 14000 diamonds"</string>
    <string name="stats_world_maxstage">Max stage</string>
    <string name="stats_world_currentstage">Current stage</string>
    <string name="stats_world_relicmult">Relic multiplier</string>
    <string name="stats_world_breakpoint">Next breakpoint</string>
    <string name="stats_world_prestigerelics">Relics from prestige</string>
    <string name="stats_world_breakpointrelics">Relics at breakpoint</string>
    <string name="stats_world_artifactseed">Artifact seed</string>
    <string name="stats_world_weaponseed">Weapon seed</string>
    <string name="stats_world_relics">Relics</string>
    <string name="stats_world_totalgold">Total gold</string>
    <string name="stats_world_goldlost">Gold lost (Prestige)</string>
    <string name="stats_world_dpslost">DPS lost (Prestige)</string>
    <string name="stats_world_totalrelics">Total relics</string>
    <string name="stats_artifact_nameheader">Artifact</string>
    <string name="stats_artifact_levelheader">Level</string>
    <string name="stats_artifact_relicsheader">Total relics</string>
    <string name="stats_herolevels_hero">Hero</string>
    <string name="stats_herolevels_level">Level</string>
    <string name="stats_herolevels_total">Total levels</string>
    <string name="optimiser_settings_relics">Relics</string>
    <string name="optimiser_settings_steps">Steps</string>
    <string name="optimiser_settings_resetrelics">Reload</string>
    <string name="optimiser_settings_heroheader">Hero levels presets</string>
    <string name="optimiser_settings_useallrelics">Use all relics</string>
    <string name="optimiser_settings_heros_fromsave">From save</string>
    <string name="optimiser_settings_heros_all">All 2000</string>
    <string name="optimiser_output_totals">Total Levels</string>
    <string name="optimiser_output_steps">Steps</string>
    <string name="optimiser_output_calc">Calculate</string>
    <string name="optimiser_herolevels_hero">Hero</string>
    <string name="optimiser_herolevels_level">Level</string>
    <string name="sequencer_artifact_seed">Current Seed</string>
    <string name="sequencer_artifact_sequenceheader">Artifact Sequence</string>
    <string name="sequencer_artifact_sequencetable_nameheader">Artifact</string>
    <string name="sequencer_artifact_sequencetable_salvageheader">Salvage?</string>
    <string name="save_manage_savename">Save Name</string>
    <string name="save_manage_editable">Editable?</string>
    <string name="save_artifact_nameheader">Artifact</string>
    <string name="save_artifact_levelheader">Level</string>
    <string name="save_customisation_swordheader">Swords</string>
    <string name="save_customisation_scarfheader">Scarves</string>
    <string name="save_customisation_hatheader">Hats</string>
    <string name="save_customisation_auraheader">Auras</string>
    <string name="save_customisation_shirtheader">Clothes</string>
    <string name="save_customisation_trailheader">Trails</string>
</resources>