<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:stretchColumns="0,1"
        android:id="@+id/stats_worldtable"
        android:animateLayoutChanges="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_maxstage"
                />

            <TextView
                android:id="@+id/stats_world_maxstage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_currentstage"
                />

            <TextView
                android:id="@+id/stats_world_currentstage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_breakpoint"
                />

            <TextView
                android:id="@+id/stats_world_breakpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_relicmult"
                />

            <TextView
                android:id="@+id/stats_world_relicmult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_prestigerelics"
                />

            <TextView
                android:id="@+id/stats_world_prestigerelics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_breakpointrelics"
                />

            <TextView
                android:id="@+id/stats_world_breakpointrelics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_artifactseed"
                />

            <TextView
                android:id="@+id/stats_world_artifactseed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_weaponseed"
                />

            <TextView
                android:id="@+id/stats_world_weaponseed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_relics"
                />

            <TextView
                android:id="@+id/stats_world_relics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_totalrelics"
                />

            <TextView
                android:id="@+id/stats_world_totalrelics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_totalgold"
                />

            <TextView
                android:id="@+id/stats_world_totalgold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_goldlost"
                />

            <TextView
                android:id="@+id/stats_world_goldlost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/row_alternate">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_world_dpslost"
                />

            <TextView
                android:id="@+id/stats_world_dpslost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"/>
        </TableRow>
    </TableLayout>

</LinearLayout>